--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^10.8.1",
+    "heic2any": "^0.0.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
